# littledog-python

./: LICENSE  pyproject.toml  readme.md
src/Littledog/: __init__.py  module.py
src/Littledog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Littledog_LittleDog5727.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
