[build-system]
requires = ["setuptools","wheel","opencv-contrib-python","numpy","caer"]
build-backend = "setuptools.build_meta"
[project]
name = "Littledog_LittleDog5727"
version = "0.0.2"
authors = [
  { name="Little Dog", email="littledog.5727@gmail.com" },
]
description = "A small package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

