[build-system]
requires = ["setuptools","wheel","opencv-contrib-python","numpy","caer","matplotlib"]
build-backend = "setuptools.build_meta"

[project]
name = "LittleDog"
version = "0.1.0"
license = {file = 'LICENSE'}
authors = [
  { name="Little Dog", email="littledog.5727@gmail.com" },
]
description = "A small package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7"
opencv-contrib-python = "*"
matplotlib = "*"
